Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11884

warmup_min_items_threshold is not honored under metadata eviction policy

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Steps to reproduce:
      1)Configure bucket with value eviction policy and set warmup_min_items_threshold to 10% using ns_server's REST api.
      2)Restart the node for warmup and observe below stats:
      curr_items_tot:99999
      ep_warmup_value_count:10004
      3)change the eviction policy to metadata eviction, the bucket warmup runs again
      the stats are now as follows:
      curr_items_tot:99999
      ep_warmup_value_count:99999

      complete warmup stats for second warmup:
      ep_warmup: enabled
      ep_warmup_dups: 0
      ep_warmup_estimate_time: 54464
      ep_warmup_estimated_key_count: 99999
      ep_warmup_estimated_value_count: 0
      ep_warmup_item_expired: 0
      ep_warmup_key_count: 99999
      ep_warmup_keys_time: 101946
      ep_warmup_min_item_threshold: 10
      ep_warmup_min_memory_threshold: 100
      ep_warmup_oom: 0
      ep_warmup_state: done
      ep_warmup_thread: complete
      ep_warmup_time: 357686
      ep_warmup_value_count: 99999

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            abhinav Abhi Dangeti
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty