MB-11884: Consider min_item_threshold in full eviction

In this case, as warmed up keys always matches warmed
up values, we can mark the min item threshold using
warmup's estimated item count.

Change-Id: Ibd1d58edd15be877c24ef794615fe0d56f9fc675
Reviewed-on: http://review.couchbase.org/40308
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>